[package]
name = "pg-data"
version = "0.1.0"
authors = ["George Papageorgiou <gpapag@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
clap-verbosity-flag = "2.0"
env_logger = "0.10.0"
log = "0.4.17"
postgres = "0.19.4"
